Added more translations warning fixes

--- a/src/messages-de.properties
+++ b/src/messages-de.properties
@@ -11,7 +11,7 @@ AboutPanel.Label_Niantic=Niantic Investigation
 AboutPanel.Label_OurWebsite=Unsere Website
 AboutPanel.Label_Version=Version
 AboutPanel.Label_Weblink=Weblinks
-AboutPanel.Version=1.1.02
+AboutPanel.Version=1.1.03
 CipherPanel.Label_CaesariaShift=Caesarian Shift
 CipherPanel.Label_CaesariaShift_Shift=Shift:
 CipherPanel.Label_MorseToAscii=Code zu Morse
@@ -28,6 +28,18 @@ CipherPanel2.Label_VigenereAutokey=Vigenere Autokey Cipher
 CipherPanel2.Label_VigenereAutokey_Passphrase=Keywort:
 CipherPanel3.Label_Skip=Skip
 CipherPanel3.Label_Skip_ValueDesc=Skip =
+Ciphers2.Error_Skip1=fehler 1: Skip muss kleiner sein, als die Länge das Codes.
+Ciphers2.Error_Skip2=error 1: Skip besitzt einen Primfaktor, durch welchen die Länge das Codes teilbar ist. Skip ist nicht möglich.
+ConvertPanel.Label_Base64=Base64
+ConvertPanel.Label_Base64Label=Base64:
+ConvertPanel.Label_Binary=Binär
+ConvertPanel.Label_BinaryLabel=Binär:
+ConvertPanel.Label_DecChar=Dezimal
+ConvertPanel.Label_DecCharLabel=Dezimal:
+ConvertPanel.Label_Hex=Hexadezimal
+ConvertPanel.Label_HexLabel=Hexadezimal:
+ConvertPanel.Label_TextASCII=Text
+ConvertPanel.Label_TextLabel=Text:
 GUI2.Label_AlwaysOnTop=Immer sichtbar
 GUI2.Label_Generate=Generieren
 GUI2.Label_LiveDecode=Echtzeit dekodieren
