--- a/src/messages-cn.properties
+++ b/src/messages-cn.properties
@@ -11,7 +11,7 @@ AboutPanel.Label_Niantic=Niantic Investigation
 AboutPanel.Label_OurWebsite=Our Website
 AboutPanel.Label_Version=Version
 AboutPanel.Label_Weblink=Weblinks
-AboutPanel.Version=1.1.02
+AboutPanel.Version=1.1.03
 CipherPanel.Label_CaesariaShift=Caesarian Shift
 CipherPanel.Label_CaesariaShift_Shift=Shift:
 CipherPanel.Label_MorseToAscii=Morsepattern to Ascii
@@ -29,6 +29,18 @@ CipherPanel2.Label_VigenereAutokey=Vigenere Autokey Cipher
 CipherPanel2.Label_VigenereAutokey_Passphrase=Passphrase:
 CipherPanel3.Label_Skip=Skip
 CipherPanel3.Label_Skip_ValueDesc=Skip =
+Ciphers2.Error_Skip1=error 1: Skip must be smaller than the length of the text.
+Ciphers2.Error_Skip2=error 1: Skip has a prime factor that cleanly divides into the text length, so it can not be used.
+ConvertPanel.Label_Base64=Base64
+ConvertPanel.Label_Base64Label=Base64:
+ConvertPanel.Label_Binary=Binary
+ConvertPanel.Label_BinaryLabel=Binary:
+ConvertPanel.Label_DecChar=Dec/Char
+ConvertPanel.Label_DecCharLabel=Dec/Char:
+ConvertPanel.Label_Hex=Hex
+ConvertPanel.Label_HexLabel=Hex:
+ConvertPanel.Label_TextASCII=Text/ASCII
+ConvertPanel.Label_TextLabel=Text:
 GUI2.Label_AlwaysOnTop=Always on top
 GUI2.Label_Generate=Generate
 GUI2.Label_LiveDecode=Live Decoding
